TW: debugger: fix info log color in dark mode

--- a/addons/debugger/style.css
+++ b/addons/debugger/style.css
@@ -143,6 +143,7 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.15);
   padding-left: 4px;
   font-family: monospace;
+  color: #000;
 }
 .sa-debugger-log[data-type="warn"] {
   border-color: hsl(50deg, 100%, 75%);
